# robotsix-board

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .stylelintrc.json  AGENT.md  CHANGELOG.md  README.md  SECURITY.md  eslint.config.mjs  mkdocs.yml  package-lock.json  package.json  pyproject.toml  vitest.config.mjs  vulture_whitelist.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-feature.yml  03-docs.yml  config.yml
.github/workflows/: ci.yml  docs.yml  release.yml
.robotsix-mill/periodic/: board_cleanup.yaml
docs/: index.md  modules.yaml
src/robotsix_board/: __init__.py  _render.py
src/robotsix_board/static/: board.css  board.js
tests/: board.test.js  test_protocol_contract.py  test_render.py  test_smoke.py
tests/robotsix_board/: board.test.js  test_render.py  test_smoke.py
