[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotsix-board"
version = "0.1.0"
description = "Shared kanban-board frontend library: column-per-status board chrome parameterized by a data adapter and render mode."
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Damien Robotsix" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff==0.15.15",
    "pytest",
    "deptry",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/robotsix_board"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "tests"]

[tool.deptry]
known_first_party = ["robotsix_board"]
optional_dependencies_dev_groups = ["dev"]
